...
                <ChainsDisplay activeChainId={activeSafe.chainId} chains={availableChains} max={5} />
              </Pressable>
            </View>
          </Container>
          <XStack gap={'$3'} marginTop={'$6'}>
            <SafeButton size={'$sm'} onPress={onPressShare} icon={<SafeFontIcon name={'export'} size={16} />} secondary>
              Share
            </SafeButton>
            <SafeButton size={'$sm'} onPress={onPressCopy} icon={<SafeFontIcon name={'copy'} size={16} />} secondary>
              Copy
            </SafeButton>
          </XStack>
        </YStack>
      </YStack>
      {Platform.OS === 'ios' && <ToastViewport multipleToasts={false} left={0} right={0} />}
    </>
...
